--- a/http/404.html
+++ b/http/404.html
@@ -4,6 +4,7 @@
     <title> 404 Not Found </title>
 </head>
 <body>
-    <p> The requested file cannot be found. </p>
+    <h1>404 Not Found</h1>
+    <p>The requested file cannot be found.</p>
 </body>
 </html>
